# rust-droid

./: Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: ci.yml
examples/: init.rs  simple_script.rs  start_app.rs  tiktok_scroll_like.rs
src/: action.rs  common.rs  config.rs  device.rs  error.rs  lib.rs  models.rs  vision.rs
src/action/: keyevent.rs  swipe.rs  text.rs  touch.rs  wait.rs
src/common/: point.rs  rect.rs  relative_rect.rs
