[package]
name = "rust-droid"
version = "0.1.1"
edition = "2024"
authors = ["jhq223 <jhq223@gmail.com>"]
description = "A powerful UI automation framework for Android."
license = "Apache-2.0"
repository = "https://github.com/jhq223/rust-droid"
readme = "README.md"
keywords = ["android", "adb", "automation", "test", "gui"]
categories = ["command-line-utilities", "development-tools::testing"]

[dependencies]
adb_client = "2.1.18"
image = "0.25.8"
thiserror = "2.0.17"
log = "0.4.28"
imageproc = "0.25"

[dev-dependencies]
anyhow = "1.0"
env_logger = "0.11"
